--- a/todo-app/public/index.html
+++ b/todo-app/public/index.html
@@ -11,6 +11,7 @@
     -->
     
     <!-- Compiled and minified CSS -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!--
